Run OpenRewrite Java 17 recipe (#3759)