@@ -24,7 +24,6 @@ import static org.assertj.core.util.Lists.newArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
-
 import org.assertj.core.api.ConcreteIterableAssert;
 import org.assertj.core.api.IterableAssertBaseTest;
 import org.assertj.core.internal.ComparatorBasedComparisonStrategy;
@@ -176,7 +175,7 @@ class IterableAssert_usingFieldByFieldElementComparator_Test extends IterableAss
 
   @Test
   void comparators_for_element_field_names_should_have_precedence_over_comparators_for_element_field_types_when_using_field_by_field_element_comparator() {
-    Comparator<String> comparator = (o1, o2) -> o1.compareTo(o2);
+    Comparator<String> comparator = String::compareTo;
     Jedi actual = new Jedi("Yoda", "green");
     Jedi other = new Jedi("Luke", "green");
 
@@ -293,8 +292,7 @@ class IterableAssert_usingFieldByFieldElementComparator_Test extends IterableAss
 
     @Override
     public String toString() {
-      return String.format("Person{first='%s', last='%s', info='%s'}",
-                           first, last, info);
+      return "Person{first='%s', last='%s', info='%s'}".formatted(first, last, info);
     }
   }
 
