@@ -12,7 +12,6 @@
  */
 package org.assertj.core.api.objectarray;
 
-import static java.lang.String.format;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.assertj.core.api.Assertions.catchThrowable;
@@ -42,7 +41,7 @@ class ObjectArrayAssert_hasOnlyOneElementSatisfying_Test {
     assertThatExceptionOfType(AssertionError.class).isThrownBy(() -> {
       Jedi[] jedis = { new Jedi("Yoda", "red") };
       assertThat(jedis).hasOnlyOneElementSatisfying(yoda -> assertThat(yoda.getName()).startsWith("L"));
-    }).withMessage(format("%nExpecting actual:%n  \"Yoda\"%nto start with:%n  \"L\"%n"));
+    }).withMessage("%nExpecting actual:%n  \"Yoda\"%nto start with:%n  \"L\"%n".formatted());
   }
 
   @Test
@@ -51,7 +50,7 @@ class ObjectArrayAssert_hasOnlyOneElementSatisfying_Test {
     assertThatExceptionOfType(AssertionError.class).isThrownBy(() -> assertThat(jedis).hasOnlyOneElementSatisfying(yoda -> {
       assertThat(yoda.getName()).startsWith("Y");
       assertThat(yoda.getName()).startsWith("L");
-    })).withMessage(String.format("%nExpecting actual:%n  \"Yoda\"%nto start with:%n  \"L\"%n"));
+    })).withMessage("%nExpecting actual:%n  \"Yoda\"%nto start with:%n  \"L\"%n".formatted());
   }
 
   @Test
@@ -67,8 +66,8 @@ class ObjectArrayAssert_hasOnlyOneElementSatisfying_Test {
       });
     });
 
-    assertThat(assertionError).hasMessageContaining(format("Expecting actual:%n  \"Yoda\"%nto start with:%n  \"L\""))
-                              .hasMessageContaining(format("Expecting actual:%n  \"Yoda\"%nto start with:%n  \"M\""));
+    assertThat(assertionError).hasMessageContaining("Expecting actual:%n  \"Yoda\"%nto start with:%n  \"L\"".formatted())
+                              .hasMessageContaining("Expecting actual:%n  \"Yoda\"%nto start with:%n  \"M\"".formatted());
   }
 
   @Test
