@@ -12,7 +12,6 @@
  */
 package org.assertj.core.error;
 
-import static java.lang.String.format;
 import static org.assertj.core.api.BDDAssertions.then;
 import static org.assertj.core.error.ShouldBeEmpty.shouldBeEmpty;
 import static org.assertj.core.presentation.StandardRepresentation.STANDARD_REPRESENTATION;
@@ -20,8 +19,6 @@ import static org.assertj.core.util.Lists.list;
 
 import java.io.File;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-
 import org.assertj.core.description.Description;
 import org.assertj.core.internal.TestDescription;
 import org.assertj.core.presentation.Representation;
@@ -44,7 +41,7 @@ class ShouldBeEmpty_create_Test {
     // WHEN
     String message = underTest.create(new TestDescription("Test"), STANDARD_REPRESENTATION);
     // THEN
-    then(message).isEqualTo(format("[Test] %nExpecting empty but was: [\"Luke\", \"Yoda\"]"));
+    then(message).isEqualTo("[Test] %nExpecting empty but was: [\"Luke\", \"Yoda\"]".formatted());
   }
 
   @Test
@@ -61,7 +58,7 @@ class ShouldBeEmpty_create_Test {
   @Test
   void should_create_specific_error_message_for_Path() {
     // GIVEN
-    Path path = Paths.get("/test.txt");
+    Path path = Path.of("/test.txt");
     ErrorMessageFactory underTest = shouldBeEmpty(path);
     // WHEN
     String message = underTest.create(new TestDescription("Test"), STANDARD_REPRESENTATION);
