@@ -24,7 +24,6 @@ import static org.assertj.core.util.Lists.newArrayList;
 import static org.mockito.Mockito.verify;
 
 import java.util.List;
-
 import org.assertj.core.api.AssertionInfo;
 import org.assertj.core.internal.Lists;
 import org.assertj.core.internal.ListsBaseTest;
@@ -115,7 +114,7 @@ class Lists_assertIsSorted_Test extends ListsBaseTest {
     AssertionInfo info = someInfo();
     List<Object> actual = newArrayList();
     actual.add("bar");
-    actual.add(new Integer(5));
+    actual.add(Integer.valueOf(5));
     actual.add("foo");
 
     Throwable error = catchThrowable(() -> lists.assertIsSorted(info, actual));
