@@ -24,7 +24,6 @@ import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.util.List;
-
 import org.junit.jupiter.api.Test;
 
 /**
@@ -35,7 +34,7 @@ import org.junit.jupiter.api.Test;
  */
 class Paths_linesOf_Test {
 
-  private static final Path RESOURCES_DIRECTORY = java.nio.file.Paths.get("src", "test", "resources");
+  private static final Path RESOURCES_DIRECTORY = Path.of("src", "test", "resources");
 
   private static final Path SAMPLE_UNIX_FILE = RESOURCES_DIRECTORY.resolve("utf8.txt");
   private static final Path SAMPLE_WIN_FILE = RESOURCES_DIRECTORY.resolve("utf8_win.txt");
@@ -52,12 +51,12 @@ class Paths_linesOf_Test {
 
   @Test
   void should_throw_exception_if_charset_name_does_not_exist() {
-    assertThatIllegalArgumentException().isThrownBy(() -> linesOf(java.nio.file.Paths.get("test"), "Klingon"));
+    assertThatIllegalArgumentException().isThrownBy(() -> linesOf(Path.of("test"), "Klingon"));
   }
 
   @Test
   void should_throw_exception_if_path_not_found() {
-    Path missingFile = java.nio.file.Paths.get("missing.txt");
+    Path missingFile = Path.of("missing.txt");
     assertThat(missingFile).doesNotExist();
 
     assertThatExceptionOfType(UncheckedIOException.class).isThrownBy(() -> linesOf(missingFile,
