@@ -16,7 +16,6 @@ import static org.assertj.core.api.Assertions.assertThatPath;
 import static org.assertj.core.api.BDDAssertions.then;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import org.assertj.core.api.AbstractPathAssert;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -27,7 +26,7 @@ class Assertions_assertThatPath_Test {
 
   @BeforeEach
   void before() {
-    actual = Paths.get(".");
+    actual = Path.of(".");
   }
 
   @Test
